project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: mullil/project:2.3
          volumeMounts:
            - name: image-cache
              mountPath: /app/files
          imagePullPolicy: Always
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: project-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: mullil/todo-backend:2.2
          imagePullPolicy: Always
