project/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:latest
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "8Mi"
              cpu: "50m"
            limits:
              memory: "48Mi"
              cpu: "150m"
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  clusterIP: None
  selector:
    app: postgres-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
